@@ -10,10 +10,12 @@ qvs-swap=Vertically swap quickbar slots
 [mod-setting-name]
 qvs-swap-mode=Mode of operation
 qvs-quickbar-blacklist=Quickbar blacklist
+qvs-blueprint-protection=Blueprint protection (recommended)
 
 [mod-setting-description]
 qvs-swap-mode=Specify which quickbar rows should be affected by swapping. [font=default-bold]NOTE:[/font] Modding API does not provide means to determine number of active quickbars rows, therefore four different options are provided (to match the [font=default-semibold]Interface/Active quickbars[/font] setting).
 qvs-quickbar-blacklist=Comma-separated list of quickbars to always exclude from vertical swapping. For example: 1,2,3.
+qvs-blueprint-protection=When enabled, prevents quickbar swapping between non-empty and empty slots. Blueprints from game/player library cannot be detected in quickbar slots, and this option will guarantee that slots containing them will not get overwritten. If disabled, it is highly recommended to place blueprints into specific rows only, and to blacklist them using the [font=default-bold]Quickbar blacklist[/font] setting.
 
 [string-mod-setting]
 qvs-swap-mode-all=All quickbar rows
